--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Indie+Flower" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
   </head>
 
   <body id="page-top">
