Product description, social media links uploaded

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <h4>Miel pura y orgánica</h4>
+              <p class="text-black-50 mb-0">Miel producida enteramente a partir de flora autóctona como quebracho, algarrobo, chañar, capacho, yuchán, guayacán, tártago y vinal. Sin duda un sabor único y distinto al de la miel producida con cultivos.</p>
             </div>
           </div>
         </div>
@@ -155,14 +155,6 @@
         <div class="row">
 
           <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-              </div>
-            </div>
           </div>
 
           <div class="col-md-4 mb-3 mb-md-0">
@@ -172,33 +164,19 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">andreskammerath@gmail.com</a>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="mx-2">
+          
+          <a href="https://www.facebook.com/mieldonangelo/" class="mx-2">
             <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-github"></i>
           </a>
         </div>
 
@@ -208,7 +186,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Copyright &copy; Miel Don Angelo 2019
       </div>
     </footer>
 
