--- a/index.html
+++ b/index.html
@@ -174,9 +174,14 @@
         </div>
 
         <div class="social d-flex justify-content-center">
-          
+          <a href="#" class="mx-2">
+            <i class="fab fa-twitter"></i>
+          </a>
           <a href="https://www.facebook.com/mieldonangelo/" class="mx-2">
             <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="mx-2">
+            <i class="fab fa-github"></i>
           </a>
         </div>
 
