--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div class="row">
 
           <div class="col-md-4 mb-3 mb-md-0">
+            
           </div>
 
           <div class="col-md-4 mb-3 mb-md-0">
@@ -171,18 +172,16 @@
           </div>
 
           <div class="col-md-4 mb-3 mb-md-0">
+            
+          </div>
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
-          </a>
+
           <a href="https://www.facebook.com/mieldonangelo/" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-github"></i>
-          </a>
+
         </div>
 
       </div>
